@@ -2,6 +2,10 @@ Cacti CHANGELOG
 -bug#0001085: LDAP enabled status not maintained on upgrade from 0.8.6j to 0.8.7
 -bug#0001100: spine hangs on unreachable hosts
 -bug#0001105: add_graphs.php --list-snmp-values for all available host snmp-fields
+-bug#0001522: Special(?) charakters break parsing of template data.
+-bug#0001452: Missing "<" and ">" in "Collection Methods=>Data Input Methods=>"Input String", When Import Template 
+-bug#0001125: XML parse error on template import with degree symbol 
+-bug#0001366: Exported data templates do not import the special characters properly 
 -bug#0001044: Creating a DS, Output field can't be selected for DT with a DIM when "Use Per-Data Source Value" is on
 -bug#0001147: Cactid doesn't trim white space from data template OIDs
 -bug#0001160: In Suggested Values editor, name and field are reversed. Include column headers
